--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <a href="#setup">Setup</a>
     <a href="#scaling">Scaling</a>
     <a href="#plugins">Plugins</a>
-    <a href="https://github.com/Sunpowder/GaryFlow" target="_blank">GitHub</a>
+    <a href="https://github.com/MONDERASDOR/GaryFlow" target="_blank">GitHub</a>
   </nav>
   <main>
     <h2 id="features">Why Gary Flow?</h2>
@@ -160,7 +160,7 @@
     <h2>Open Source & Community</h2>
     <ul>
       <li>MIT Licensed, free forever</li>
-      <li>Contributions welcome on <a href="https://github.com/Sunpowder/GaryFlow">GitHub</a></li>
+      <li>Contributions welcome on <a href="https://github.com/MONDERASDOR/GaryFlow">GitHub</a></li>
       <li>Project by <strong>Sunpowder</strong> and the Gary Flow community</li>
     </ul>
   </main>
